# DistributedExercisesAAU

./: pyproject.toml  socket_demo.py
exercises/: exercise1.py  exercise2.py
