[tool.poetry]
name = "distributedexercisesaau"
version = "0.1.0"
description = ""
authors = ["miroslavmatocha <matocham254@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pynput = "^1.7.6"
cryptography = "^37.0.4"
PyQt6 = "^6.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
